--- a/ProyectoAplicadaI/UI/Consultas/ConsultadeEntradadeActivos.resx
+++ b/ProyectoAplicadaI/UI/Consultas/ConsultadeEntradadeActivos.resx
@@ -120,4 +120,81 @@
   <metadata name="GeneralerrorProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAQJVqDC6iXQsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAADmqcQk4oGi7OJ9oujmqcQkAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAzmWYKOKBouzifaP84n2j/OKBouzmqcQkAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM5lmCjifaLw4n2j/OJ9o/zifaP84n2j/OKBouzOZ
+        ZgoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADOZZgo4n2i8OJ9o/zifaP84n2j/OJ9o/zif
+        aP84n2j/OJ9ovDOZZgoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAzmWYKOZ9ovTifaP84n2j/OJ9o/zif
+        aP84n2j/OJ9o/zifaP84n2j/OJ9ovDOZZgoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM5lmCjmfaL04n2j/OJ9o/zif
+        aP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OZ9ovTOZZgoAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADOZZgo4nme+OJ9o/zif
+        aP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OZ9ovTOZZgoAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAzmWYKOJ5nvjif
+        aP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ5nvjOZ
+        ZgoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALqJdCzie
+        Z744n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zif
+        aP84n2j/OJ5nvjOZZgoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC6i
+        XQs4n2i/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP9YroD/Sqh2/zifaP84n2j/OJ9o/zif
+        aP84n2j/OJ9o/zifaP84n2j/OJ5nvi6iXQsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAuol0LOJ9ovzifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OqBp/7jdyf+ExKL/OJ9o/zif
+        aP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9ovy6iXQsAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAALqJdCzifaMA4n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/2m3jf/s9vH/////////
+        ///P6Nv/SKd0/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9ovy6iXQsAAAAAAAAAAAAA
+        AAAAAAAAAAAAADylaRE4n2jMOJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP85n2n/6vXv/+v1
+        8P9qt47/i8en//////+g0bf/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OaBoyzyl
+        aREAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOJ9o/zifaP84n2j/OJ9o/0Kk
+        cP+9383/icam/zifaP9Pqnn//////7DZw/84n2j/OJ9o/zifaP84n2j/OJ9o/wAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA4n2j/OJ9o/zif
+        aP84n2j/OJ9o/zifaP8+om3/jMio/+r17//8/f3/abeN/zifaP84n2j/OJ9o/zifaP84n2j/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADif
+        aP84n2j/OJ9o/zifaP84n2j/U6x9/+Px6v//////yOTV/2Gzh/84n2j/OJ9o/zifaP84n2j/OJ9o/zif
+        aP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAOJ9o/zifaP84n2j/OJ9o/zifaP+63cr//P39/3O7lP85n2n/U6x8/0mndf84n2j/OJ9o/zif
+        aP84n2j/OJ9o/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAA4n2j/OJ9o/zifaP84n2j/OJ9o/8rl1//1+vf/PaJs/1qwgv//////qNW9/zif
+        aP84n2j/OJ9o/zifaP84n2j/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAADifaP84n2j/OJ9o/zifaP84n2j/gcKg//7//v/m8+z/8/n2//j8
+        +v9csIP/OJ9o/zifaP84n2j/OJ9o/zifaP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOJ9o/zifaP84n2j/OJ9o/zifaP84n2j/ZbWK/8vm
+        1//F49P/Vq1+/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA4n2j/OJ9o/zifaP84n2j/OJ9o/zif
+        aP84n2j/i8en/4fFpP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADifaP84n2j/OJ9o/zif
+        aP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOJ9o/zif
+        aP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAA4n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zif
+        aP84n2j/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAADifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zif
+        aP84n2j/OJ9o/zifaP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAOJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zifaP84n2j/OJ9o/zif
+        aP84n2j/OJ9o/zifaP84n2j/OJ9o/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA5n2lVOZ9pVTmfaVU5n2lVOZ9pVTmfaVU5n2lVOZ9pVTmf
+        aVU5n2lVOZ9pVTmfaVU5n2lVOZ9pVTmfaVU5n2lVAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA//////////////////5////8P///+B////AP///gB///wAP//4AB//8A
+        AP/+AAB//AAAP/gAAB/wAAAP4AAAB/8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8A
+        AP//AAD//wAA//8AAP////////////////8=
+</value>
+  </data>
 </root>
